--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,17 @@
-{
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+{  
+    "presets": [
+    [
+        "@babel/preset-env",
+        {
+            "targets": {
+            "node": "10"
+            }
+        }
+        ],
+        "@babel/preset-react"
+    ],
+    "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime"
+    ]
 }
