--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "start": "node index.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4"
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-react": "^7.8.3"
   },
   "engines": {
     "node": "10.x.x"
