--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "caniuse-lite": "^1.0.30001099",
     "express.js": "^1.0.0",
     "history": "^4.10.1",
     "live-server": "^1.2.1",
     "parcel-bundler": "^1.10.3",
     "path": "^0.12.7",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "reactstrap": "^8.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "reactstrap": "^8.5.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -22,10 +23,10 @@
     "start": "node index.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-react": "^7.8.3"
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/preset-react": "^7.10.4"
   },
   "engines": {
     "node": "10.x.x"
