--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "dev": "parcel src/index.html",
