--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "caniuse-lite": "^1.0.30001099",
+    "bulma": "^0.9.0",
+    "bulma-helpers": "^0.3.12",
+    "caniuse-lite": "^1.0.30001120",
     "express.js": "^1.0.0",
     "history": "^4.10.1",
     "live-server": "^1.2.1",
+    "material-design-icons": "^3.0.1",
     "parcel-bundler": "^1.10.3",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.4",
@@ -24,9 +27,9 @@
     "start": "node index.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.11.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-react": "^7.10.4"
   },
   "engines": {
